update images > feature_image property

--- a/content/book-notes/show-your-work/index.mdx
+++ b/content/book-notes/show-your-work/index.mdx
@@ -5,7 +5,7 @@ date: "2021/12/26"
 title: "Show Your Work! by Austin Kleon - Summary & Notes"
 tags: ["book"]
 summary: "The book changed my outlook on sharing my work online."
-images: "images/books/Show-Your-Work.jpeg"
+featured_image: "images/books/Show-Your-Work.jpeg"
 author: "Austin Kleon"
 bookTitle: "Show Your Work!"
 keywords:
