--- a/content/portfolio/kanricho/index.mdx
+++ b/content/portfolio/kanricho/index.mdx
@@ -3,7 +3,7 @@ type: "portfolio"
 title: "Kanricho"
 date: "04/09/2019"
 path: "/portfolio/kanricho/"
-images: "images/thumbnails/portfolio/kanricho.jpg"
+featured_image: "images/thumbnails/portfolio/kanricho.jpg"
 publish: false
 ---
 
