--- a/content/portfolio/malikgabroun/index.mdx
+++ b/content/portfolio/malikgabroun/index.mdx
@@ -3,7 +3,7 @@ type: "portfolio"
 title: "MalikGabroun.com"
 date: 14/10/2018
 path: "/portfolio/malikgabroun/"
-images: "images/thumbnails/portfolio/personal-website.jpg"
+featured_image: "images/thumbnails/portfolio/personal-website.jpg"
 publish: false
 ---
 
