--- a/content/posts/2018-11-3--verifying-gatsby/index.mdx
+++ b/content/posts/2018-11-3--verifying-gatsby/index.mdx
@@ -5,7 +5,7 @@ date: "2018/11/03"
 title: "How to Verify a Gatsby Site in Google Search Console"
 tags: ["javascript", "gatsby"]
 summary: "In this post, I will be talking about verifying gatsby site in search console"
-images: "images/thumbnails/checklist.jpeg"
+featured_image: "images/thumbnails/checklist.jpeg"
 imageAuthorID: "@glenncarstenspeters"
 imageAuthor: "Glenn Carstens-Peters"
 keywords: ["gatsby", "google", "search console"]
