--- a/content/posts/2018-12-26--create-pages/index.mdx
+++ b/content/posts/2018-12-26--create-pages/index.mdx
@@ -6,7 +6,7 @@ lastUpdated: "2020/04/24"
 title: "How to create pages dynamically in Gatsby"
 tags: ["javascript", "gatsby"]
 summary: "In this post, we will be looking into how to create pages using Gatsby API createPages"
-images: "images/thumbnails/whiteOpenBook.jpeg"
+featured_image: "images/thumbnails/whiteOpenBook.jpeg"
 imageAuthorID: "@kadh"
 imageAuthor: "Kira auf der Heide"
 keywords: ["gatsby", "createpage", "dynamic pages", "create pages"]
