--- a/content/posts/2019-01-1--things-i-would-like-to-know-more/index.mdx
+++ b/content/posts/2019-01-1--things-i-would-like-to-know-more/index.mdx
@@ -5,7 +5,7 @@ date: "2019/01/01"
 title: "Things I Would Like to know more about by end of 2019"
 tags: ["general"]
 summary: "Some of the programming topics I would like to know more about by the end of the year"
-images: "images/thumbnails/code-file.jpg"
+featured_image: "images/thumbnails/code-file.jpg"
 keywords: ["personal goals", "tech"]
 redirects:
   [
