--- a/content/posts/2019-02-14--react-context/index.mdx
+++ b/content/posts/2019-02-14--react-context/index.mdx
@@ -6,7 +6,7 @@ lastUpdated: "2021/12/14"
 title: "React Context API: An Introduction"
 tags: ["javascript", "react"]
 summary: "In this post, we will be looking into React Context API"
-images: "images/thumbnails/containers.jpeg"
+featured_image: "images/thumbnails/containers.jpeg"
 imageAuthorID: "@federize"
 imageAuthor: "Federico Beccari"
 keywords: ["react", "react context", "js"]
