--- a/content/posts/2019-03-22--understanding-redux/index.mdx
+++ b/content/posts/2019-03-22--understanding-redux/index.mdx
@@ -5,7 +5,7 @@ date: "2019/03/22"
 title: "Understanding Redux by doing a basic implementation of the store"
 tags: ["redux", "javascript"]
 summary: "reimplemention of redux library store to learn how it works"
-images: "images/thumbnails/wearingGlasses.jpeg"
+featured_image: "images/thumbnails/wearingGlasses.jpeg"
 imageAuthorID: "@nate_dumlao"
 imageAuthor: "Nathan Dumlao"
 keywords: ["redux", "js"]
