--- a/content/posts/2019-04-14--graphql-alias/index.mdx
+++ b/content/posts/2019-04-14--graphql-alias/index.mdx
@@ -5,7 +5,7 @@ date: "2019/04/15"
 title: "Gatsby tip on running multiple queries (GraphQL aliases)"
 tags: ["graphql", "javascript", "gatsby"]
 summary: "A quick tip on how to run multiple queries in one component/page using graphql aliases"
-images: "images/thumbnails/pairProgramming.jpeg"
+featured_image: "images/thumbnails/pairProgramming.jpeg"
 imageAuthorID: "@alvaroreyes"
 imageAuthor: "Alvaro Reyes"
 keywords:
