--- a/content/posts/2020-01-16--create-pages-with-MDX/index.mdx
+++ b/content/posts/2020-01-16--create-pages-with-MDX/index.mdx
@@ -7,7 +7,7 @@ title: 'How to create pages dynamically in Gatsby using MDX'
 tags: ['javascript', 'gatsby']
 summary: 'In this post, we will be looking into how to create pages
 dynamically using MDX'
-images: 'images/thumbnails/artJournal.jpeg'
+featured_image: 'images/thumbnails/artJournal.jpeg'
 imageAuthorID: '@esteejanssens'
 imageAuthor: 'Estée Janssens'
 keywords: ['create pages, gatsby create page, Gatsby MDX', 'gatsby-plugin-mdx']
