--- a/content/posts/2020-01-27--syntax-highlighting/index.mdx
+++ b/content/posts/2020-01-27--syntax-highlighting/index.mdx
@@ -6,7 +6,7 @@ lastUpdated: "2021/10/29"
 title: "Syntax Highlighting in Gatsby MDX"
 tags: ["javascript", "gatsby"]
 summary: "this post shows how to use prism-react-renderer to enable syntax highlighting for Gatsby MDX files"
-images: "images/thumbnails/text-highlight.jpeg"
+featured_image: "images/thumbnails/text-highlight.jpeg"
 imageAuthorID: "@esteejanssens"
 imageAuthor: "Estée Janssens"
 keywords: ["syntax highlighting, prism, MDX syntax highlight"]
