--- a/content/posts/2020-02-18--intro-to-algolia-in-gatsby-part-i/index.mdx
+++ b/content/posts/2020-02-18--intro-to-algolia-in-gatsby-part-i/index.mdx
@@ -5,7 +5,7 @@ date: "2020/02/18"
 title: "Add Algolia Search to Your Gatsby Site (Part 1)"
 tags: ["javascript", "gatsby", "react"]
 summary: "In this post we will be looking into configuring and adding algolia instant search component to your gatsby site"
-images: "images/thumbnails/searching.jpeg"
+featured_image: "images/thumbnails/searching.jpeg"
 imageAuthorID: "@amartino20"
 imageAuthor: "Anthony Martino"
 keywords:
