--- a/content/posts/2020-08-6--vue-meta-data/index.mdx
+++ b/content/posts/2020-08-6--vue-meta-data/index.mdx
@@ -5,7 +5,7 @@ date: "2020/08/06"
 title: "Vue-Meta: Adding MetaData to Vue.js Components"
 tags: ["javascript", "vue"]
 summary: "In this post, we will be looking into how to add vue-meta to our project and use it inside the component"
-images: "images/thumbnails/imacScreen.jpeg"
+featured_image: "images/thumbnails/imacScreen.jpeg"
 imageAuthorID: "@kaleidico"
 imageAuthor: "Kaleidico"
 keywords: ["vue, vue-meta, vue metadata"]
