--- a/content/posts/2020-09-29--programmatic-redirects/index.mdx
+++ b/content/posts/2020-09-29--programmatic-redirects/index.mdx
@@ -6,7 +6,7 @@ lastUpdated: ""
 title: "Programmatic Redirects in Gatsby"
 tags: ["javascript", "gatsby"]
 summary: "In this post, we will be looking into how we can add redirects programmatically to our site"
-images: "images/thumbnails/roadSplit.jpeg"
+featured_image: "images/thumbnails/roadSplit.jpeg"
 imageAuthorID: "@pinewatt"
 imageAuthor: "Pine Watt"
 keywords:
