--- a/content/posts/2020-12-1-cancel-async-promise/index.mdx
+++ b/content/posts/2020-12-1-cancel-async-promise/index.mdx
@@ -6,7 +6,7 @@ lastUpdated: ""
 title: "Cancelling an Async Promise with AbortController"
 tags: ["javascript"]
 summary: "Cancel fetch requests using AbortController"
-images: "images/thumbnails/laptopOpen.jpg"
+featured_image: "images/thumbnails/laptopOpen.jpg"
 imageAuthorID: "@goshua13"
 imageAuthor: "Joshua Aragon"
 keywords: ["fetch api, abortController, cancel promise"]
