--- a/content/posts/2022-01-10--use-static-query/index.mdx
+++ b/content/posts/2022-01-10--use-static-query/index.mdx
@@ -5,7 +5,7 @@ date: "2022/01/10"
 title: "Gatsby useStaticQuery Hook: The Quick Guide"
 tags: ["graphql", "javascript", "gatsby"]
 summary: "In this post, we will be looking into Gatsby useStaticQuery hook, graphql aliases and custom hook."
-images: "images/thumbnails/reactProgramming.jpg"
+featured_image: "images/thumbnails/reactProgramming.jpg"
 imageAuthorID: "@lautaroandreani"
 imageAuthor: "Lautaro Andreani"
 keywords:
