--- a/content/portfolio/github-battle/index.mdx
+++ b/content/portfolio/github-battle/index.mdx
@@ -3,7 +3,7 @@ type: "portfolio"
 title: "Github Battle"
 date: 14/10/2018
 path: "/portfolio/github-battle/"
-images: "images/thumbnails/portfolio/github-battle.jpg"
+featured_image: "images/thumbnails/portfolio/github-battle.jpg"
 publish: false
 ---
 
