--- a/content/posts/hello-world/index.mdx
+++ b/content/posts/hello-world/index.mdx
@@ -5,7 +5,7 @@ date: "2018/10/29"
 title: "Hello World"
 tags: ["general"]
 summary: "A description about my site, and what's coming in this website"
-images: "images/thumbnails/helloWorld.jpeg"
+featured_image: "images/thumbnails/helloWorld.jpeg"
 imageAuthorID: "@johnnyabroad"
 imageAuthor: "Jean-Pierre Brungs"
 keywords: ["hello world, intro, description"]
