update style import, add embed module and update post to use twitter

--- a/content/book-notes/show-your-work/index.mdx
+++ b/content/book-notes/show-your-work/index.mdx
@@ -107,7 +107,7 @@ _Credit Is Always due_
 
 It's always good practice to give credit to people who've helped you find really cool work. You can also mention your source of inspiration so people browsing your profile can trace back to it.
 
-![tweet about giving credit](./tweet.png)
+<Tweet tweetLink="malroun1/status/1469705899795173376" align="center" />
 
 ## 5. Tell Good Stories
 
