update posts with links

--- a/content/posts/2018-12-26--create-pages/index.mdx
+++ b/content/posts/2018-12-26--create-pages/index.mdx
@@ -14,6 +14,8 @@ redirects: ["/gatsby-create-pages/", "/blog/gatsby-create-pages/"]
 publish: true
 ---
 
+import ReadMore from "@components/ReadMore";
+
 In this post, we will be looking into how you can create pages programmatically from data (markdown files) in Gatsby.
 
 In order to create these pages dynamically from markdown, we will be looking into Gatsby's Node `createPages` API.
@@ -173,3 +175,5 @@ You can see the result of the graphql query in the above snippet when ran in Gra
 ![createPages-graphql-query](./graphql-query.png)
 
 **Here is a [Demo](https://peaceful-davinci-7ffc1f.netlify.com/) of Gatsby createPages following the post and you can find the repo [here](https://github.com/gabroun/gatsby-starter-example)**
+
+<ReadMore link1="/blog/gatsby-create-pages-with-mdx/" />
