--- a/content/posts/2019-04-14--graphql-alias/index.mdx
+++ b/content/posts/2019-04-14--graphql-alias/index.mdx
@@ -23,6 +23,8 @@ redirects:
 publish: true
 ---
 
+import ReadMore from "@components/ReadMore";
+
 Say you want to fetch specific data in one page based on an argument or a condition which can't be run using one query as you can't query the same field with different condition or argument. One way of doing that by using [GraphQL aliases](https://graphql.org/learn/queries/#aliases) which you can use to rename the returned dataset to anything you want.
 
 ## Example
@@ -78,3 +80,5 @@ export const query = graphql`
 Looking at the above example, we can see the query I made will return multiple datasets by giving it an alias which allowed me to run multiple queries with different arguments and conditions to get the specific data object I needed as you can see in the screenshot.
 
 ![graphql alias](./graphql-alias.jpg)
+
+<ReadMore link1="/blog/use-statc-query-hook/" />
