--- a/content/posts/2020-01-16--create-pages-with-MDX/index.mdx
+++ b/content/posts/2020-01-16--create-pages-with-MDX/index.mdx
@@ -19,6 +19,8 @@ redirects:
 publish: true
 ---
 
+import ReadMore from "@components/ReadMore";
+
 In this post, we will be looking into how to create pages programmatically using MDX in Gatsby.
 
 To get up and running, we need to install a couple of plugins
@@ -195,3 +197,5 @@ Hello World
 **Following the post and you can find a starter repo [here](https://github.com/gabroun/gatsby-mdx-starter) that shows usage of MDX pages**
 
 If you found this post helpful, then you will love this one as it shows you [how to add syntax highlighting to MDX files](/blog/syntax-highlighting-in-gatsby-mdx/).
+
+<ReadMore link1="/blog/syntax-highlighting-in-gatsby-mdx/" />
