--- a/content/posts/2020-01-27--syntax-highlighting/index.mdx
+++ b/content/posts/2020-01-27--syntax-highlighting/index.mdx
@@ -18,6 +18,8 @@ redirects:
 publish: true
 ---
 
+import ReadMore from "@components/ReadMore";
+
 In this post, we will be looking into how to enable syntax highlighting for [Gatsby MDX files](/blog/gatsby-create-pages-with-mdx/) using [prism-react-renderer](https://github.com/FormidableLabs/prism-react-renderer)
 
 first, we need to install a couple of modules
@@ -125,3 +127,5 @@ export const wrapRootElement = ({ element }) => {
 ```
 
 **Following the post and you can find a starter repo [here](https://github.com/gabroun/gatsby-mdx-starter) that shows usage of mdx pages and syntax highlighting**
+
+<ReadMore link1="/blog/gatsby-create-pages-with-mdx/" />
