--- a/content/posts/2019-04-14--graphql-alias/index.mdx
+++ b/content/posts/2019-04-14--graphql-alias/index.mdx
@@ -23,7 +23,7 @@ redirects:
 publish: true
 ---
 
-import ReadMore from "@components/ReadMore";
+import ReadMore from "../../../src/components/ReadMore";
 
 Say you want to fetch specific data in one page based on an argument or a condition which can't be run using one query as you can't query the same field with different condition or argument. One way of doing that by using [GraphQL aliases](https://graphql.org/learn/queries/#aliases) which you can use to rename the returned dataset to anything you want.
 
