--- a/content/posts/2020-01-16--create-pages-with-MDX/index.mdx
+++ b/content/posts/2020-01-16--create-pages-with-MDX/index.mdx
@@ -19,7 +19,7 @@ redirects:
 publish: true
 ---
 
-import ReadMore from "@components/ReadMore";
+import ReadMore from "../../../src/components/ReadMore";
 
 In this post, we will be looking into how to create pages programmatically using MDX in Gatsby.
 
