update post import

--- a/content/posts/2020-01-27--syntax-highlighting/index.mdx
+++ b/content/posts/2020-01-27--syntax-highlighting/index.mdx
@@ -18,7 +18,7 @@ redirects:
 publish: true
 ---
 
-import ReadMore from "../../../src/components/ReadMore";
+import ReadMore from "@components/ReadMore";
 
 In this post, we will be looking into how to enable syntax highlighting for [Gatsby MDX files](/blog/gatsby-create-pages-with-mdx/) using [prism-react-renderer](https://github.com/FormidableLabs/prism-react-renderer)
 
