--- a/content/posts/react-algolia-course/index.mdx
+++ b/content/posts/react-algolia-course/index.mdx
@@ -5,7 +5,7 @@ date: "2021/11/20"
 title: "Getting Started with Algolia API"
 tags: ["react"]
 summary: " In this course, you will learn how the Algolia API works by understanding its main components."
-featured_image: "algolia-course.png"
+featured_image: "images/thumbnails/algolia-course.png"
 
 keywords: ["algolia", "react", "algolia react search", "react instant search"]
 publish: true
